--- a/Visualize/assets/css/main2.css
+++ b/Visualize/assets/css/main2.css
@@ -106,7 +106,9 @@
     #main .thumbnails img{
         width: 100%;
         border-top-left-radius: 0.2rem;
+        border-top-right-radius: 0.2rem;
         border-bottom-right-radius: 0.2rem;
+        border-bottom-left-radius: 0.2rem;
         display: block;
     }
     
