--- a/Visualize/assets/css/main2.css
+++ b/Visualize/assets/css/main2.css
@@ -1,4 +1,4 @@
-#wrapper{
+    #wrapper{
     /*    border:5px solid red;*/
     }
     
@@ -11,7 +11,7 @@
     }
     
     body{
-        background-image: url(../../images/bg.jpg); 
+        background-image: url(../../images/good.jpg); 
         background-size:cover;
         font-family: "Source Scans Pro", sans-serif;
     }
@@ -43,7 +43,7 @@
     
     #header h1{
         font-size: 1.5rem;
-        color: rgba(255, 255, 255, 0.5);
+        color: rgba(145, 16, 16, 0.5);
         font-weight: 200;
         margin-bottom: 1.5rem;
         line-height: 2.3rem;
@@ -51,8 +51,8 @@
     }
     
     #header h1 strong{
-        color: white;
-        font-weight: 200;
+        color: rgba(145, 16, 16, 0.5);
+        font-weight: 400;
     }
     
     #header h1 a{
@@ -101,14 +101,13 @@
     #main .thumbnails a{
         margin-bottom: 1.5rem; 
         display: block;
+        text-decoration: none;
     }
     
     #main .thumbnails img{
         width: 100%;
-        border-top-left-radius: 0.2rem;
-        border-top-right-radius: 0.2rem;
-        border-bottom-right-radius: 0.2rem;
-        border-bottom-left-radius: 0.2rem;
+        border-top-left-radius: 0.6rem;
+        border-top-right-radius: 0.6rem;
         display: block;
     }
     
@@ -122,8 +121,8 @@
         text-align: center;
         background-color: rgba(255,255,255,0.1);
         color: white;
-        font-size: 0.8rem;
-        font-weight: 200;
+        font-size: 0.9rem;
+        font-weight: 500;
     }
     
     #footer{
